--- a/package.json
+++ b/package.json
@@ -1,1 +1,20 @@
-{}
+{
+  "name": "shopping-website",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "node backend/server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/BehnamZM/mern-stack-shopping-project.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/BehnamZM/mern-stack-shopping-project/issues"
+  },
+  "homepage": "https://github.com/BehnamZM/mern-stack-shopping-project#readme"
+}
